# PyFC

./: .gitignore  main.py  pyproject.toml
doc/: design.md  requirements.md
doc/prompts/: 01-cartridge-palette.md  02-cpu-core.md  03-bus-system.md  04-ppu-core.md  05-input-controller.md  06-renderer.md  07-emulator-main.md  README.md
doc/task/: m1-rom-cpu.md  m2-cpu-instructions.md  m3-ppu-basic.md  m4-ppu-input.md  m5-mario-playable.md  progress-checklist.md  task-overview.md
src/: __init__.py  bus.py  cartridge.py  cpu.py  emulator.py  input.py  main.py  palette.py  ppu.py  ppu_bus.py  renderer.py
src/test_program.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_bus.py  test_cartridge.py  test_cpu.py  test_emulator.py  test_input.py  test_main.py  test_palette.py  test_ppu.py  test_ppu_bus.py  test_renderer.py
